--- a/ShineWay/Properties/Resources.resx
+++ b/ShineWay/Properties/Resources.resx
@@ -268,4 +268,10 @@
   <data name="registerHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\registerHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="proceed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\proceed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="proceedHover" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\proceedHover.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
