--- a/ShineWay/Properties/Resources.resx
+++ b/ShineWay/Properties/Resources.resx
@@ -307,4 +307,7 @@
   <data name="Ovviewlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ovviewlight.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ErrorInputVehicle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ErrorInputVehicle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
