--- a/ShineWay/UI/customer.resx
+++ b/ShineWay/UI/customer.resx
@@ -9347,6 +9347,9 @@
         8/0G7iK2MkU9goEAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="pictureBox15.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <data name="pictureBox15.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAA1gAAAMuCAYAAAAE5KJ0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
